# plaoc

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  dockerfile  dockerfile.ndk22  package-lock.json  test.yml
Plaoc-Android/: TODO.md  build.gradle.kts  settings.gradle.kts
Plaoc-Android/app/: build.gradle.kts
Plaoc-iOS/: Podfile
Plaoc-iOS/Plaoc-iOS/: AppDelegate.swift  CustomTabbarViewController.swift  CustomWebView.swift  LeadReplyHandle.swift  Plaoc-iOS-Bridging-Header.h  Schemehandler.swift  SecondViewController.swift  ViewController.swift  WebViewViewController.swift
Plaoc-iOS/Plaoc-iOS.xcodeproj/: project.pbxproj
Plaoc-iOS/Plaoc-iOS.xcworkspace/: contents.xcworkspacedata
Ploac-Android/: local.properties
Ploac-Android/app/: build.gradle.kts
Plugin/: #bfsw.ts  html.html-data.json
Plugin/bottombar/: #bfsp.ts  bfcsBottomBar#android.ts  bfcsBottomBar.ts  bfcsBottomBar.type.ts  bfcsBottomBarButton#android.ts  bfcsBottomBarButton.ts  bfcsBottomBarIcon.ts  bfcsBottomBarText.ts  ffi#android.ts  ffi#desktop.ts  ffi#ios.ts  index.html  index.ts
Plugin/dialogs/: #bfsp.ts  bfcsDialogButton#android.ts  bfcsDialogButton.ts  bfcsDialogs#android.ts  bfcsDialogs.ts  bfcsDialogs.type.ts  ffi#android.ts  ffi#ios.ts  index.ts
Plugin/icon/: #bfsp.ts  bfspIcon.ts  bfspIcon.type.ts  index.ts
Plugin/keyboard/: #bfsp.ts  bfcsKeyboard#android.ts  bfcsKeyboard.ts  bfcsKeyboard.type.ts  ffi#android.ts  ffi#ios.ts  index.html  index.ts
Plugin/navigation/: #bfsp.ts  BfcsNavigator.ts  EvtOut.ts  builder#android.ts  defineHtmlElement.ts  ffi#android.ts  ffi#android.type.ts  index.html  index.ts  index.type.ts
Plugin/statusbar/: #bfsp.ts  bfcsStatusBar#android.ts  bfcsStatusBar.ts  bfcsStatusBar.type.ts  bfcsStatusBarColor#android.ts  ffi#android.ts  ffi#desktop.ts  ffi#ios.ts  index.html  index.ts
Plugin/test/: #bfsp.ts  index.html  index.ts
Plugin/topbar/: #bfsp.ts  bfcsTopBar#android.ts  bfcsTopBar.ts  bfcsTopBar.type.ts  bfcsTopBarButton.ts  ffi#android.ts  ffi#desktop.ts  ffi#ios.ts  index.html  index.ts
Plugin/typings/: #bfsp.ts  index.ts  index.type.ts
Plugin/util/: #bfsp.ts  index.ts
android/: AppMgr.md  build.gradle  settings.gradle  versions.gradle
android/app/: .gitignore  build.gradle
docs/: BFS第一里程碑需求.md
iOS/: Podfile
iOS/BFExplorer/: Podfile  (+1 more)
plaoc/: #bfsw.ts  .gitignore  README.md  copy.cjs  deno.jsonc  import_map.json  import_map_ios.json  mod.ts  npmlink.sh  package.json  tsconfig.json
plaoc_runtime/: Cargo.toml  aarch64-linux-android.md
plaoc_runtime/example/: hello_world.js
plaoc_runtime/src/: main.rs
rust_lib/: .gitignore  Cargo.toml  Cross.toml  README.md  bfs-app.md  build-android.sh  cargo-1.24.3.toml  copy-to-android.cjs  scripts.md  tmp.js
rust_lib/assets/: hello_runtime.js
rust_lib/runtime/: Cargo.toml  build.rs  errors.rs  ext_js.rs  lib.rs  permissions.rs  web_worker.rs  worker.rs
rust_lib/runtime-0.48.0/: build.rs  js.rs  worker.rs
rust_lib/runtime-0.48.0/ops/: io.rs
rust_lib/runtime-0.61.0/: Cargo.toml  build.rs
rust_lib/runtime-0.61.0/examples/: hello_runtime.js  hello_runtime.rs
rust_lib/runtime-1.24.3/: Cargo.toml  build.rs  lib.rs  web_worker.rs  worker.rs
rust_lib/runtime-v0.48.1/js/: 99_main.js
rust_lib/runtime/examples/: hello_runtime.js  hello_runtime.rs
rust_lib/runtime/js/: 90_deno_ns.js  99_main.js
rust_lib/runtime/ops/: http.rs  io.rs  worker_host.rs
rust_lib/src/: colors.rs  diagnostics.rs  errors.rs  fmt_errors.rs  java_glue.rs  java_glue.rs.in  lib.rs  main.rs  module_loader.rs  my_deno_runtime.rs
rust_lib/src/android/: android_inter.rs  deno.rs  mod.rs
rust_lib/src/js_bridge/: call_android_function.rs  call_js_function.rs  executor.rs  mod.rs  poll-promsie.rs  promise.rs  promsieOut.rs  tmp.rs
rust_lib/src/ops/: errors.rs  mod.rs
rust_lib/src/web_socket/: handler.rs  mod.rs  ws.rs
test-vue3/: README.md  admin.html  copy-to-build.cjs  copy.cjs  package-lock.json  package.json  qrcode.html  tsconfig.json
(+936 files in other folders)
