[package]
edition = "2021"
name = "rust_lib"
version = "0.1.0"

[dependencies]
# rifgen = "0.1.51"
#logging
android_logger = "0.11.0"
deno_console = {path = "../../deno/ext/console", features = ["standalone"]}
deno_core = {path = "../../deno/core", features = ["standalone"]}
deno_crypto = {path = "../../deno/ext/crypto", features = ["standalone"]}
deno_ffi = {path = "../../deno/ext/ffi", features = ["standalone"]}
deno_runtime = {path = "./runtime", features = ["standalone"]}
deno_tls = {path = "../../deno/ext/tls", features = ["standalone"]}
deno_url = {path = "../../deno/ext/url", features = ["standalone"]}
deno_web = {path = "../../deno/ext/web", features = ["standalone"]}
deno_webidl = {path = "../../deno/ext/webidl", features = ["standalone"]}
log = "0.4.16"
log-panics = "2.0.0"
once_cell = "=1.10.0"

deno_ast = {version = "0.16.0", features = [
  "bundler",
  "cjs",
  "codegen",
  "dep_graph",
  "module_specifier",
  "proposal",
  "react",
  "sourcemap",
  "transforms",
  "transpiling",
  "typescript",
  "view",
  "visit",
]}
deno_graph = "0.26.0"
import_map = "=0.9.0"
regex = "=1.5.5"
serde = {version = "=1.0.136", features = ["derive"]}
tokio = "1.17.0"
# assets_manager = "0.7.2"
# android-ndk = "0.0.6"
futures = {version = "0.3.21", default-features = false}

lazy_static = "1.4.0"
serde_json = "1.0"
tokio-stream = "0.1.6"
uuid = {version = "0.4", features = ["serde", "v4"]}
warp = "0.3.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"
jni-sys = "0.3.0"
ndk = "0.6.0"
ndk-context = "0.1.1"
ndk-sys = "0.3.0"

[build-dependencies]
deno_core = {path = "../../deno/core"}
flapigen = "0.6.0-pre9"
rifgen = "0.1.51"
zstd = "=0.9.2"

[lib]
crate-type = ["cdylib"]
name = "rust_lib"
