[package]
edition = "2021"
name = "rust_lib"
version = "0.1.0"

[dependencies]
# rifgen = "0.1.51"
#logging
android_logger = "0.11.0"
deno_console = {path = "../deno/ext/console"}
deno_core = {path = "../deno/core"}
deno_crypto = {path = "../deno/ext/crypto"}
# deno_ffi = {path = "../deno/ext/ffi"}
deno_broadcast_channel = {path = "../deno/ext/broadcast_channel"}
deno_runtime = {path = "./runtime"}
deno_tls = {path = "../deno/ext/tls"}
deno_url = {path = "../deno/ext/url"}
deno_web = {path = "../deno/ext/web"}
deno_webidl = {path = "../deno/ext/webidl"}
log = "0.4.16"
log-panics = "2.0.0"
once_cell = "1.15.0"

deno_ast = {version = "0.17.0", features = [
  "bundler",
  "cjs",
  "codegen",
  "dep_graph",
  "module_specifier",
  "proposal",
  "react",
  "sourcemap",
  "transforms",
  "transpiling",
  "typescript",
  "view",
  "visit",
]}
deno_graph = "0.30.0"
import_map = "=0.12.1"
regex = "=1.7.0"
serde = {version = "=1.0.141", features = ["derive"]}
tokio = "1.19.0"
# assets_manager = "0.7.2"
# android-ndk = "0.0.6"
futures = {version = "0.3.21", default-features = false}

atty = "0.2.14"
lazy_static = "1.4.0"
serde_json = "1.0.79"
termcolor = "1.1.3"
tokio-stream = "0.1.8"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
warp = "0.3.1"

jni = "0.19.0"
jni-sys = "0.3.0"
[target.'cfg(target_os="android")'.dependencies]
ndk = "0.6.0"
ndk-context = "0.1.1"
ndk-sys = "0.3.0"

[build-dependencies]
deno_core = {path = "../deno/core"}
# flapigen = "0.6.0-pre9"
rifgen = "0.1.51"
zstd = "0.11.2"

[dev-dependencies]
test_util = {path = "../deno/test_util"}

[lib]
crate-type = ["cdylib"]
name = "rust_lib"
